[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["Sloonoff <Enclaf@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_5"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

